Solve problems and add new documentation
